gobmkida/c1/gg_get_rand_state
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gg_get_rand_state/src/utils/random.c:638:12: error: expected expression
*( _OWORD *)&state->x[20] = *( _OWORD *)&x[20]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gg_get_rand_state/src/utils/random.c:638:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->x[20] = *( _OWORD *)&x[20]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gg_get_rand_state/src/utils/random.c:638:40: error: expected expression
*( _OWORD *)&state->x[20] = *( _OWORD *)&x[20]; 
                                       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gg_get_rand_state/src/utils/random.c:638:32: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->x[20] = *( _OWORD *)&x[20]; 
                               ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gg_get_rand_state/src/utils/random.c:639:12: error: expected expression
*( _OWORD *)&state->x[16] = *( _OWORD *)&x[16]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gg_get_rand_state/src/utils/random.c:639:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->x[16] = *( _OWORD *)&x[16]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gg_get_rand_state/src/utils/random.c:639:40: error: expected expression
*( _OWORD *)&state->x[16] = *( _OWORD *)&x[16]; 
                                       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gg_get_rand_state/src/utils/random.c:639:32: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->x[16] = *( _OWORD *)&x[16]; 
                               ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gg_get_rand_state/src/utils/random.c:640:12: error: expected expression
*( _OWORD *)&state->x[12] = *( _OWORD *)&x[12]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gg_get_rand_state/src/utils/random.c:640:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->x[12] = *( _OWORD *)&x[12]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gg_get_rand_state/src/utils/random.c:640:40: error: expected expression
*( _OWORD *)&state->x[12] = *( _OWORD *)&x[12]; 
                                       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gg_get_rand_state/src/utils/random.c:640:32: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->x[12] = *( _OWORD *)&x[12]; 
                               ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gg_get_rand_state/src/utils/random.c:641:12: error: expected expression
*( _OWORD *)&state->x[8] = *( _OWORD *)&x[8]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gg_get_rand_state/src/utils/random.c:641:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->x[8] = *( _OWORD *)&x[8]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gg_get_rand_state/src/utils/random.c:641:39: error: expected expression
*( _OWORD *)&state->x[8] = *( _OWORD *)&x[8]; 
                                      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gg_get_rand_state/src/utils/random.c:641:31: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->x[8] = *( _OWORD *)&x[8]; 
                              ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gg_get_rand_state/src/utils/random.c:642:12: error: expected expression
*( _OWORD *)&state->x[4] = *( _OWORD *)&x[4]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gg_get_rand_state/src/utils/random.c:642:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->x[4] = *( _OWORD *)&x[4]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gg_get_rand_state/src/utils/random.c:642:39: error: expected expression
*( _OWORD *)&state->x[4] = *( _OWORD *)&x[4]; 
                                      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gg_get_rand_state/src/utils/random.c:642:31: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->x[4] = *( _OWORD *)&x[4]; 
                              ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gg_get_rand_state/src/utils/random.c:643:12: error: expected expression
*( _OWORD *)state->x = *( _OWORD *)x; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gg_get_rand_state/src/utils/random.c:643:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)state->x = *( _OWORD *)x; 
   ^
22 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gg_get_rand_state/src/obj/5/random.o] Error 1
